refactor: split oversized classes and remove allowlist baseline (#10)
* refactor: eliminate magic strings with AIConfigurationProperties constants

- Create AIConfigurationProperties class with all property name constants
- Replace hardcoded strings in GroqChatModelConfig and GroqEmbeddingConfig
- Update SpringAIConfig to use constants for conditional properties
- Replace magic strings in all AI service classes (OutreachAIService, ProspectorAIService, ScoringAIService, StrategyAIService)
- Add comprehensive unit tests for AIConfigurationProperties
- Improve maintainability by centralizing property names
- Reduce risk of typos in configuration property names

Breaking changes: None (internal refactoring only)
Code smell eliminated: Magic strings scattered across classes

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* refactor: extract URL normalization service to eliminate code duplication

- Create UrlNormalizationService with comprehensive URL handling logic
- Add support for query parameters and edge cases in URL normalization
- Update GroqChatModelConfig and GroqEmbeddingConfig to use centralized service
- Remove duplicated normalizeBaseUrl methods from both configuration classes
- Add comprehensive unit tests with 25 test cases covering all scenarios
- Improve maintainability by centralizing URL logic in single location
- Enhance URL handling with proper query parameter preservation

Breaking changes: None (internal refactoring only)
Code smell eliminated: Duplicated URL normalization logic

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* refactor: improve exception handling with specific AI configuration exceptions

- Create AIConfigurationException with detailed context and user-friendly messages
- Add comprehensive error handling for different failure scenarios (api-key, connection, creation)
- Replace generic Exception catching with specific e